classDiagram
    class User {
        +uuid id
        +text name
        +text email
        +text avatar_url
        +text role
        +text[] skills
        +int4 wellness_score
        +int4 max_workload
        +text last_active
        +bool auto_assign
        +jsonb skill_experience
        +getUsers() Promise~User[]~
        +getUser(id: string) Promise~User | null~
        +updateUserSettings(id: string, settings: Partial~UserSettings~) Promise~User | null~
    }

    class Project {
        +uuid id
        +text name
        +text description
        +text key
        +uuid owner_id
        +text meeting_url
        +getProjects(ownerId?: string) Promise~Project[]~
        +addProject(project: Project) Promise~void~
        +addProjectMember(projectId: string, userId: string, role: string) Promise~void~
        +getProjectMembers(projectId: string) Promise~User[]~
    }

    class ProjectMember {
        +uuid project_id
        +uuid user_id
        +text role
        +timestamptz joined_at
    }

    class Task {
        +uuid id
        +uuid project_id
        +text title
        +text status
        +text priority
        +uuid assignee_id
        +jsonb time_logs
        +timestamptz active_timer_start
        +getTasks(projectId?: string) Promise~Task[]~
        +getTaskById(id: string) Promise~Task | null~
        +addTask(task: Task) Promise~void~
        +updateTask(id: string, updates: Partial~Task~) Promise~Task | null~
    }

    class Document {
        +uuid id
        +uuid project_id
        +text title
        +text type
        +uuid created_by
        +getDocuments(projectId: string) Promise~Document[]~
        +createDocument(doc: Document) Promise~Document | null~
    }

    class Notification {
        +uuid id
        +uuid user_id
        +text type
        +text title
        +text message
        +bool is_read
        +text link
        +text entity_id
        +uuid project_id
        +getNotifications(userId: string) Promise~Notification[]~
        +addNotification(n: Notification) Promise~void~
        +markNotificationAsRead(id: string) Promise~void~
    }

    class OTP {
        +uuid id
        +text email
        +text otp
        +timestamptz expires_at
        +sendOTP(email: string) Promise~void~
        +verifyOTP(email: string, otp: string) Promise~boolean~
    }

    class Deployment {
        +uuid id
        +uuid project_id
        +text environment
        +text version
        +text status
        +text release_notes
        +text commit_hash
        +text branch
        +text pull_request_url
        +text pipeline_url
        +text pipeline_provider
        +int4 duration_seconds
        +text triggered_by
        +uuid created_by
        +getDeployments(projectId: string) Promise~Deployment[]~
        +createDeployment(d: Deployment, taskIds: string[]) Promise~void~
    }

    class Form {
        +uuid id
        +uuid project_id
        +text title
        +jsonb fields
        +getForms(projectId: string) Promise~Form[]~
        +addForm(form: Form) Promise~void~
    }

    class FormResponse {
        +uuid id
        +uuid form_id
        +uuid respondent_id
        +jsonb answers
        +addFormResponse(r: FormResponse) Promise~void~
    }

    class Shortcut {
        +uuid id
        +uuid project_id
        +text name
        +text url
        +getShortcuts(projectId: string) Promise~Shortcut[]~
        +addShortcut(s: Shortcut) Promise~void~
    }

    class RepoLink {
        +uuid id
        +uuid project_id
        +text url
        +getRepoLinks(projectId: string) Promise~RepoLink[]~
        +addRepoLink(r: RepoLink) Promise~void~
    }

    User "1" --o "*" Project : owner
    User "1" --o "*" ProjectMember : member
    Project "1" --o "*" ProjectMember : members
    Project "1" --o "*" Task : tasks
    Project "1" --o "*" Document : documents
    Project "1" --o "*" Deployment : deployments
    Project "1" --o "*" Form : forms
    Task "1" --o "*" Comment : comments
    User "1" --o "*" Notification : receives
    Form "1" --o "*" FormResponse : answers
    User "1" --o "*" OTP : requests
